Fix wrapping of text in the terminal output

--- a/ide/ide.css
+++ b/ide/ide.css
@@ -742,3 +742,6 @@ div#debugger-disassembly {
 div#right-pane-tabContent {
   scroll-behavior: auto !important;
 }
+div#output-container > pre {
+  white-space: pre-wrap;
+}
